Add Java comparison tests demonstrating successful replay
- Implement identical test logic in Java for both embedded and external archives
- Java successfully replays 100% of messages in both scenarios
- Update README with Java test instructions and results comparison
- Results confirm the issue is specific to rusteron, not the test setup

The Java tests use the same recording/replay pattern and successfully process
all 1,000,000 messages, while rusteron only replays ~80-99 messages before
aborting.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>